<resources>
    <string name="app_name">Ativos</string>
    <string name="label_name">Nome ação</string>
    <string name="label_symbol">Sigla ação</string>
    <string name="label_my_stocks">Minha Carteira</string>
    <string name="label_value_now">valor atual</string>


    <string name="stock_symbol_title">Sigla ação</string>
    <string name="stock_name_title">Nome ação</string>
    <string name="stock_paid_value">Valor Pago</string>
    <string name="stock_expected_profit">Lucro esperado</string>
    <string name="stock_amount">Quantidade ações</string>
    <string name="stock_broking_value">Valor corretagem</string>

    <string name="stock_expected_profit_label">Lucro esperado</string>
    <string name="stock_final_value_label">valor de venda</string>

    <string name="message_symbol_title_empty">Digite a Sigla da ação</string>
    <string name="message_nome_empty">Digite o nome da ação</string>
    <string name="message_value_paid_empty">Digite o valor pago na ação</string>
    <string name="message_broking_empty">Digite o valor da corretagem</string>
    <string name="message_profit_empty">Digite o percentual de lucro esperado</string>
    <string name="message_amount_empty">Digite a quantidade de ações da compra</string>
    <string name="impossible_to_obtain_stock_data">Impossível obter informações da ação</string>


    <string name="title_minhas_notas">Minhas Notas</string>
    <string name="procurar_anotacoes">Procurar anotações</string>
    <string name="note_title">Título Anotação</string>
    <string name="note_subtitle">Subtítulo  Anotação</string>
    <string name="type_note_here">Digite sua Anotação aqui</string>



    <string name="message_success">Anotação Salva</string>
    <string name="message_update_success">Anotação Atualizada</string>
    <string name="message_delete_success">Anotação Deletada</string>
    <string name="message_permission_denied">Permissão negada</string>
    <string name="message_error_loading_image">Erro ao carregar Imagem</string>
    <string name="loading">carregando...</string>
    <string name="error_loading">Erro ao carregar</string>
    <string name="color_note">Cor da Anotação</string>
    <string name="choose_a_color">Escolha \numa cor</string>
    <string name="delete_note">Deletar Anotação</string>
    <string name="add_link">Adicionar Link</string>
    <string name="add_image">Adicionar Imagem</string>
    <string name="add_url">Adicionar URL</string>
    <string name="field_add_url">adicione a URL aqui</string>
    <string name="add">Adicionar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Deletar</string>
    <string name="message_empty_url">Adicione uma url</string>
    <string name="message_invalid_url">Adicione uma url válida</string>
    <string name="message_delete_note">Você tem certeza que deseja deletar a Anotação</string>
    <string name="other_apps">Outros Aplicativos</string>
    <string name="url_ondev" translatable="false">http://ondev.ca\ncontact@ondev.ca</string>
    <string name="contact_ondev" translatable="false">contact@ondev.ca</string>
    <string name="psalms">Salmos</string>
    <string name="evaluation">Média 4.7 estrelas</string>
    <string name="balloons">Estourando Balões</string>
    <string name="evaluation_balloons">Média 3.9 estrelas</string>

    <string-array name="stocks_list">
        <item>VALE3</item>
        <item>ITUB4</item>
        <item>B3SA3</item>
        <item>PETR4</item>
        <item>BBDC4</item>
        <item>PETR3</item>
        <item>ABEV3</item>
        <item>BBAS3</item>
        <item>MGLU3</item>
        <item>ITSA4</item>
        <item>WEGE3</item>
        <item>JBSS3</item>
        <item>LREN3</item>
        <item>GNDI3</item>
        <item>NTCO3</item>
        <item>SUZB3</item>
        <item>RENT3</item>
        <item>BBDC3</item>
        <item>EQTL3</item>
        <item>RADL3</item>
        <item>RAIL3</item>
        <item>VVAR3</item>
        <item>LAME4</item>
        <item>BTOW3</item>
        <item>UGPA3</item>
        <item>VIVT4</item>
        <item>SBSP3</item>
        <item>BBSE3</item>
        <item>CCRO3</item>
        <item>BRFS3</item>
        <item>GGBR4</item>
        <item>BRDT3</item>
        <item>BPAC11</item>
        <item>KLBN11</item>
        <item>HAPV3</item>
        <item>HYPE3</item>
        <item>SULA11</item>
        <item>COGN3</item>
        <item>ENGI11</item>
        <item>TIMP3</item>
        <item>ELET3</item>
        <item>CSAN3</item>
        <item>PCAR3</item>
        <item>EGIE3</item>
        <item>CMIG4</item>
        <item>SANB11</item>
        <item>YDUQ3</item>
        <item>TOTS3</item>
        <item>BRML3</item>
        <item>IRBR3</item>
        <item>ELET6</item>
        <item>QUAL3</item>
        <item>BRAP4</item>
        <item>CRFB3</item>
        <item>FLRY3</item>
        <item>CSNA3</item>
        <item>CYRE3</item>
        <item>AZUL4</item>
        <item>BRKM5</item>
        <item>TAEE11</item>
        <item>EMBR3</item>
        <item>MULT3</item>
        <item>MRVE3</item>
        <item>CIEL3</item>
        <item>ENBR3</item>
        <item>CPFE3</item>
        <item>MRFG3</item>
        <item>GOAU4</item>
        <item>USIM5</item>
        <item>BEEF3</item>
        <item>IGTA3</item>
        <item>CVCB3</item>
        <item>GOLL4</item>
        <item>ECOR3</item>
        <item>HGTX3</item>
        <item>OIBR3</item>
    </string-array>
</resources>