<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:textColor="@color/colorBlue"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSymbol"
            tools:text="@string/label_name" />

        <TextView
            android:id="@+id/tvSymbol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:textColor="@color/colorOrange"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/label_symbol" />

        <TextView
            android:id="@+id/tvValueNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/label_value_now"
            android:textColor="@color/colorUp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvPaid"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/stock_paid_value"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tvAmount"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvValueNow" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/stock_amount"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tvProfit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvPaid"
            app:layout_constraintTop_toBottomOf="@+id/tvValueNow" />

        <TextView
            android:id="@+id/tvProfit"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/stock_expected_profit_label"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvAmount"
            app:layout_constraintTop_toBottomOf="@+id/tvValueNow" />

        <TextView
            android:id="@+id/tvValueFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/stock_final_value_label"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvBroking"
            app:layout_constraintTop_toTopOf="@+id/tvBroking" />

        <TextView
            android:id="@+id/tvBroking"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/stock_broking_value"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tvValueFinal"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPaidValue" />

        <TextView
            android:id="@+id/tvPaidValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tvPaid"
            app:layout_constraintStart_toStartOf="@+id/tvPaid"
            app:layout_constraintTop_toBottomOf="@+id/tvPaid"
            tools:text="R$ 100.00" />

        <TextView
            android:id="@+id/tvAmountValue"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tvAmount"
            app:layout_constraintStart_toStartOf="@+id/tvAmount"
            app:layout_constraintTop_toBottomOf="@+id/tvAmount"
            tools:text="R$ 10.00" />

        <TextView
            android:id="@+id/tvProfitValue"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tvProfit"
            app:layout_constraintStart_toStartOf="@+id/tvProfit"
            app:layout_constraintTop_toBottomOf="@+id/tvProfit"
            tools:text="10%" />

        <TextView
            android:id="@+id/tvValueFinalValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvValueFinal"
            app:layout_constraintStart_toStartOf="@+id/tvValueFinal"
            app:layout_constraintTop_toBottomOf="@+id/tvValueFinal"
            tools:text="R$ 200.00" />

        <TextView
            android:id="@+id/tvBrokingValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvBroking"
            app:layout_constraintStart_toStartOf="@+id/tvBroking"
            app:layout_constraintTop_toBottomOf="@+id/tvBroking"
            tools:text="R$ 200.00" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>