<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMiscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_background_miscellaneous"
    android:orientation="vertical"
    app:behavior_peekHeight="30sp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/textMiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/color_note"
        android:textColor="@color/colorWhite"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/background_note_color_1" />

            <ImageView
                android:id="@+id/ivColor1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/app_name"
                android:padding="8sp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/background_note_color_2" />

            <ImageView
                android:id="@+id/ivColor2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/background_note_color_3" />

            <ImageView
                android:id="@+id/ivColor3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/background_note_color_4" />

            <ImageView
                android:id="@+id/ivColor4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/background_note_color_5" />

            <ImageView
                android:id="@+id/ivColor5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:tint="@color/colorWhite" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/choose_a_color"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            android:tint="@color/colorIcons" />

        <TextView
            android:id="@+id/addImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_medium"
            android:includeFontPadding="false"
            android:text="@string/add_image"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddUrl"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_link"
            android:tint="@color/colorIcons" />

        <TextView
            android:id="@+id/addUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_medium"
            android:includeFontPadding="false"
            android:text="@string/add_link"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDeleteStock"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_margin="8dp"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            android:tint="@color/colorIcons" />

        <TextView
            android:id="@+id/deleteNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_medium"
            android:includeFontPadding="false"
            android:text="@string/delete_note"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>