<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundPrimary"
        tools:context=".ui.DetailActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:clipToPadding="false"
            android:paddingBottom="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_back"
                    app:tint="@color/colorIcons"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivSave"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shape_background_done_button"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:focusable="true"
                    android:padding="4dp"
                    android:src="@drawable/ic_done"
                    app:layout_constraintBottom_toBottomOf="@+id/ivBack"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ivBack"
                    app:tint="@color/colorIcons" />

                <EditText
                    android:id="@+id/etSymbolTitle"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/stock_symbol_title"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="16sp"
                    android:background="@drawable/shape_background_fields"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivBack" />

                <EditText
                    android:id="@+id/etStockName"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shape_background_fields"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/stock_name_title"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textMultiLine"
                    android:padding="8dp"
                    android:textColor="@color/colorTextSubtitle"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etSymbolTitle" />

                <EditText
                    android:id="@+id/etPaid"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shape_background_fields"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/stock_paid_value"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textMultiLine"
                    android:padding="8dp"
                    android:textColor="@color/colorTextSubtitle"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etStockName" />

                <EditText
                    android:id="@+id/etBroking"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shape_background_fields"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/stock_paid_value"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textMultiLine"
                    android:padding="8dp"
                    android:textColor="@color/colorTextSubtitle"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etPaid" />

                <EditText
                    android:id="@+id/etProfit"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/shape_background_fields"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/stock_paid_value"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textMultiLine"
                    android:padding="8dp"
                    android:textColor="@color/colorTextSubtitle"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etBroking" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <include layout="@layout/layout_miscellaneous"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>